# dotgk

./: .gitignore  Cargo.toml  README.md  example.json  install.sh  test_settings.rs
.github/workflows/: deploy.yml  rust.yml
examples/: example.json  gatekeeper_example.json
examples/dotgk/: condition_all_fail.json  condition_none_pass.json  file_fail.json  file_pass.json  gatekeeper_fail.json  hostname_fail.json
examples/dotgk/cache/: cache.json
examples/dotgk/gatekeeper/: bool_fail.json  bool_pass.json  condition_all_fail_first.json  condition_all_pass.json  condition_none_fail.json  condition_none_fail_second.json  gatekeeper_pass.json  hostname_pass.json
examples/dotgk/gatekeepers/: condition_all_fail.lua  condition_all_fail_first.lua  condition_all_pass.lua  condition_any_fail.json  condition_any_fail.lua  condition_any_pass.json  condition_any_pass.lua  condition_any_pass_second.json  condition_any_pass_second.lua  condition_none_fail.lua  condition_none_fail_first.lua  condition_none_fail_second.lua  condition_none_pass.lua  file_fail.lua  file_pass.lua  gatekeeper_fail.lua  gatekeeper_pass.lua  hostname_fail.lua  os_unix_pass.lua
src/: cache.rs  cache_generators.rs  cli.rs  evaluators.rs  gatekeeper.rs  lib.rs  lua_executor.rs  main.rs  settings.rs
src/cache/: cache.rs  mod.rs
src/cache/generators/: lua.rs  mod.rs  python.rs  shell.rs  test_utils.rs
src/evaluators/: bool_evaluator.rs  evaluator_type.rs  file_evaluator.rs  gatekeeper_evaluator.rs  hostname_evaluator.rs  mod.rs  os_evaluator.rs
tests/: lua_integration_test.rs
(+3 files in other folders)
