[package]
name = "dotgk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
hostname = "0.4.1"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.40", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
