[package]
name = "dotgk"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
hostname = "0.4.1"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.40", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
mlua = { version = "0.9", features = ["lua54", "vendored"] }
regex = "1.10"

[dev-dependencies]
tempfile = "3.0"
